Create reference `sco-validation-and-verification-for-apps`

--- a/reference/_order.yaml
+++ b/reference/_order.yaml
@@ -2,3 +2,4 @@
 - Enrichment API - Mobile Apps
 - Enrichment API - CTV Apps
 - Enrichment API - Domains
+- Supply Chain Object Validation and Verification API (SCOVV API)
