Create reference `sco-validation-and-verification-for-websites`

--- a/reference/Supply Chain Object Validation and Verification API (SCOVV API)/_order.yaml
+++ b/reference/Supply Chain Object Validation and Verification API (SCOVV API)/_order.yaml
@@ -1,2 +1,3 @@
 - sco-validation-and-verification-for-apps
 - bulk-sco-validation-and-verification-for-apps
+- sco-validation-and-verification-for-websites
