--- a/reference/Supply Chain Object Validation and Verification API (SCOVV API)/_order.yaml
+++ b/reference/Supply Chain Object Validation and Verification API (SCOVV API)/_order.yaml
@@ -1,3 +1,4 @@
 - sco-validation-and-verification-for-apps
 - bulk-sco-validation-and-verification-for-apps
 - sco-validation-and-verification-for-websites
+- sco-validation-and-verification-for-websites-or-apps
