--- a/reference/Supply Chain Object Validation and Verification API (SCOVV API)/_order.yaml
+++ b/reference/Supply Chain Object Validation and Verification API (SCOVV API)/_order.yaml
@@ -2,3 +2,4 @@
 - bulk-sco-validation-and-verification-for-apps
 - sco-validation-and-verification-for-websites
 - sco-validation-and-verification-for-websites-or-apps
+- bulk-sco-validation-and-verification-for-websites-or-apps
