Create reference `sco-validation`

--- a/reference/Supply Chain Object Validation and Verification API (SCOVV API)/_order.yaml
+++ b/reference/Supply Chain Object Validation and Verification API (SCOVV API)/_order.yaml
@@ -3,3 +3,4 @@
 - sco-validation-and-verification-for-websites
 - sco-validation-and-verification-for-websites-or-apps
 - bulk-sco-validation-and-verification-for-websites-or-apps
+- sco-validation
