Create reference `bulk-sco-validation`

--- a/reference/Supply Chain Object Validation and Verification API (SCOVV API)/_order.yaml
+++ b/reference/Supply Chain Object Validation and Verification API (SCOVV API)/_order.yaml
@@ -4,3 +4,4 @@
 - sco-validation-and-verification-for-websites-or-apps
 - bulk-sco-validation-and-verification-for-websites-or-apps
 - sco-validation
+- bulk-sco-validation
