Create reference `fraud`

--- a/reference/_order.yaml
+++ b/reference/_order.yaml
@@ -3,3 +3,4 @@
 - Enrichment API - CTV Apps
 - Enrichment API - Domains
 - Supply Chain Object Validation and Verification API (SCOVV API)
+- Ad Fraud API
